--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <header class="container">
         <nav class="row navbar navbar-expand-sm navbar-light d-flex flex-md-wrap flex-lg-nowrap no-gutter-cus-one">
             <div class="w-100 col-xl-4 d-flex flex-nowrap no-gutter-cus">
-                <button class="navbar-toggler border-0 col-xs-2 px-1" type="button" data-toggle="collapse"
-                    data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler border-0 col-xs-2 px-1" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand col-xl-12 col-sm-7 mx-md-auto col-xs-8" href="#">
