--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             </div>
             <div class="collapse navbar-collapse flex-row-reverse col-xl-8 p-0" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-md-0 w-100 d-flex justify-content-between no-gutter-cus">
-                    <a class="nav-item nav-link text-dark mx-md-1 mb-3 mt-5 my-sm-1 text-center" href="#">HOME <span
+                    <a class="nav-item nav-link mx-md-1 mb-3 mt-5 my-sm-1 text-center" href="#">HOME <span
                             class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link text-dark mx-md-2 my-3 my-sm-1 text-center" href="#">All COURSES</a>
-                    <a class="nav-item nav-link text-dark mx-md-2 my-3 my-sm-1 text-center" href="#">LIST LESSON</a>
-                    <a class="nav-item nav-link text-dark mx-md-2 my-3 my-sm-1 text-center" href="#">LESSON DETAIL</a>
-                    <a class="nav-item nav-link text-dark mx-md-2 my-3 my-sm-1 text-center" href="#">LOGIN/REGISTER</a>
-                    <a class="nav-item nav-link text-dark mx-md-2 my-3 my-sm-1 text-center" href="#">PROFILE</a>
+                    <a class="nav-item nav-link mx-md-2 my-3 my-sm-1 text-center" href="#">All COURSES</a>
+                    <a class="nav-item nav-link mx-md-2 my-3 my-sm-1 text-center" href="#">LIST LESSON</a>
+                    <a class="nav-item nav-link mx-md-2 my-3 my-sm-1 text-center" href="#">LESSON DETAIL</a>
+                    <a class="nav-item nav-link mx-md-2 my-3 my-sm-1 text-center" href="#">LOGIN/REGISTER</a>
+                    <a class="nav-item nav-link mx-md-2 my-3 my-sm-1 text-center" href="#">PROFILE</a>
                 </div>
             </div>
         </nav>
