--- a/index.html
+++ b/index.html
@@ -40,6 +40,31 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="hapo-wrap-slide position-relative d-flex align-items-center mt-md-4">
+            <img class="background-banner" src="image/Hapo_Learn_banner.png" alt="Banner">
+            <div class="container-fluid position-absolute wrap-det">
+                <div class="hapo-slide-desc  mx-auto">
+                    <h1 class="hapo-slide-desc-slogan my-2 my-md-2 my-lg-3">
+                        Learn Anytime, Anywhere <b class="text-fix"><br>at HapoLearn</b>
+                        <img src="image/main_chim.png" alt="??">
+                        <b class="text-fix">!</b>
+                    </h1>
+                    <span class="hapo-slide-desc-slogan-det d-block">
+                        Interactive lessons, "on-the-go"<br>
+                        practice, peer support.
+                    </span>
+                    <div class="hapo-button-courses">
+                        <a href="#"
+                            class="btn btn-primary border-0 mt-3 px-md-4 py-md-2 mt-md-3 px-lg-5 py-lg-0 mt-lg-4 px-5 py-3 btn-banner-cus">
+                            Start Learning Now !
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hapo-wrap-space"></div>
+    </main>
 </body>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
