--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="font/font.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" type="image/png" href="image/chim2.png" />
     <link rel="stylesheet" href="css/style.css">
@@ -16,12 +17,15 @@
 <body>
     <header class="container">
         <nav class="row navbar navbar-expand-sm navbar-light d-flex flex-md-wrap flex-lg-nowrap p-md-0">
-            <div class="w-100 col-xl-4 d-flex flex-nowrap no-gutter-cus">
+            <div class="w-100 col-xl-4 d-flex flex-nowrap no-gutter-cus px-0">
                 <button class="navbar-toggler border-0 col-xs-2 px-1" type="button" data-toggle="collapse"
                     data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
+                    <label for="close" class="position-relative "></label>
                 </button>
+                <input type="checkbox" id="close">
+                <i class="fa fa-times close"></i>
                 <a class="navbar-brand col-xl-12 col-sm-7 mx-md-auto col-xs-8" href="#">
                     <img class="d-block d-sm-none mx-auto" src="image/Hapo_Learn-425.png" alt="Logo">
                     <img class="d-none d-sm-block my-md-3 mx-xl-0 w-100" src="image/logo.png" alt="Logo">
