--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
     <main>
         <div class="hapo-wrap-slide position-relative d-flex align-items-center mt-md-4">
-            <img class="background-banner" src="image/Hapo_Learn_banner.png" alt="Banner">
+            <img class="background-banner w-100" src="image/Hapo_Learn_banner.png" alt="Banner">
             <div class="container-fluid position-absolute wrap-det">
                 <div class="hapo-slide-desc  mx-auto">
                     <h1 class="hapo-slide-desc-slogan my-2 my-md-2 my-lg-3">
