--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 </head>
 
 <body>
-    <header class="container">
-        <nav class="row navbar navbar-expand-sm navbar-light d-flex flex-md-wrap flex-lg-nowrap p-md-0">
-            <div class="w-100 col-xl-4 d-flex flex-nowrap no-gutter-cus">
+    <header class="container px-xl-0">
+        <nav class="row navbar navbar-expand-md navbar-light d-flex flex-md-wrap flex-lg-nowrap p-md-0">
+            <div class="w-100 col-xl-4 d-flex flex-nowrap no-gutter-cus px-xl-0">
                 <button class="navbar-toggler border-0 col-xs-2 px-1" type="button" data-toggle="collapse"
                     data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand col-xl-12 col-sm-7 mx-md-auto col-xs-8" href="#">
+                <a class="navbar-brand col-xl-12 col-sm-7 mx-md-0 mx-md-auto col-xs-8 px-xl-0" href="#">
                     <img class="d-block d-sm-none mx-auto" src="image/Hapo_Learn-425.png" alt="Logo">
                     <img class="d-none d-sm-block my-md-3 mx-xl-0 w-100" src="image/logo.png" alt="Logo">
                 </a>
             </div>
-            <div class="collapse navbar-collapse flex-row-reverse col-xl-8 p-0" id="navbarNavAltMarkup">
+            <div class="collapse navbar-collapse flex-row-reverse col-xl-7 offset-xl-1 p-0" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-md-0 w-100 d-flex justify-content-between no-gutter-cus">
                     <a class="nav-item nav-link mx-md-1 mb-3 mt-5 my-sm-1 text-center" href="#">HOME <span
                             class="sr-only">(current)</span></a>
