--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </nav>
     </header>
     <main>
-        <div class="hapo-wrap-slide position-relative d-flex align-items-center mt-md-4">
+        <div class="hapo-wrap-slide position-relative d-flex justify-content-center align-items-center mt-md-4">
             <img class="background-banner w-100" src="image/Hapo_Learn_banner.png" alt="Banner">
-            <div class="container-fluid position-absolute wrap-det">
+            <div class="container position-absolute px-xl-0 mr-xl-5 wrap-det">
                 <div class="hapo-slide-desc  mx-auto">
                     <h1 class="hapo-slide-desc-slogan my-2 my-md-2 my-lg-3">
                         Learn Anytime, Anywhere <b class="text-fix"><br>at HapoLearn</b>
