--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="hapo-wrap-space"></div>
         <div class="container container-fix">
             <div class="row row-one">
-                <div class="col-md-4 course-one">
+                <div class="col-md-4 course-left">
                     <div class="card">
                         <img class="card-img-top" src="image/course1.png" alt="Card image cap">
                         <div class="card-body pb-xl-5">
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 course-two">
+                <div class="col-md-4 course-center">
                     <div class="card">
                         <img class="card-img-top" src="image/laravel.png" alt="Card image cap">
                         <div class="card-body pb-xl-5">
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 course-three">
+                <div class="col-md-4 course-right">
                     <div class="card">
                         <img class="card-img-top" src="image/php.png" alt="Card image cap">
                         <div class="card-body pb-xl-5">
@@ -120,7 +120,7 @@
         </div>
         <div class="container container-fix">
             <div class="row row-one row-four mt-xl-5 mt-sm-3">
-                <div class="col-md-4 course-one">
+                <div class="col-md-4 course-left">
                     <div class="card">
                         <img class="card-img-top" src="image/CSS.png" alt="Card image cap">
                         <div class="card-body pb-xl-5">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 course-two">
+                <div class="col-md-4 course-center">
                     <div class="card">
                         <img class="card-img-top" src="image/rails.png" alt="Card image cap">
                         <div class="card-body pb-xl-5">
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 course-three">
+                <div class="col-md-4 course-right">
                     <div class="card">
                         <img class="card-img-top" src="image/java 1.png" alt="Card image cap">
                         <div class="card-body pb-xl-5">
