--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
                         <div class="hapo-message main-font">
                             <img src="image/user1.png" alt="">
                             <div class="hapo-user-inf">
-                                <div class="hapo-userN">
+                                <div class="hapo-user-name">
                                     <b>Nguyen Van Lam</b>
                                 </div>
-                                <div class="hapo-coursesN">
+                                <div class="hapo-courses-name">
                                     php
                                 </div>
                                 <div class="hapo-like">
@@ -257,10 +257,10 @@
                         <div class="hapo-message main-font">
                             <img src="image/user1.png" alt="">
                             <div class="hapo-user-inf">
-                                <div class="hapo-userN">
+                                <div class="hapo-user-name">
                                     <b>Nguyen Van Lam</b>
                                 </div>
-                                <div class="hapo-coursesN">
+                                <div class="hapo-courses-name">
                                     php
                                 </div>
                                 <div class="hapo-like">
@@ -281,10 +281,10 @@
                         <div class="hapo-message main-font">
                             <img src="image/user1.png" alt="">
                             <div class="hapo-user-inf">
-                                <div class="hapo-userN">
+                                <div class="hapo-user-name">
                                     <b>Nguyen Van Lam</b>
                                 </div>
-                                <div class="hapo-coursesN">
+                                <div class="hapo-courses-name">
                                     php
                                 </div>
                                 <div class="hapo-like">
@@ -303,10 +303,10 @@
                         <div class="hapo-message main-font">
                             <img src="image/user1.png" alt="">
                             <div class="hapo-user-inf">
-                                <div class="hapo-userN">
+                                <div class="hapo-user-name">
                                     <b>Nguyen Van Lam</b>
                                 </div>
-                                <div class="hapo-coursesN">
+                                <div class="hapo-courses-name">
                                     php
                                 </div>
                                 <div class="hapo-like">
