--- a/index.html
+++ b/index.html
@@ -338,32 +338,32 @@
             </div>
         </div>
         <div class="container hapo-wrap-statistic">
-            <div class="hapo-content-static text-center">
+            <div class="hapo-content-static text-center mt-xl-5 pt-xl-5 mt-md-4 pt-md-4 mt-4 pt-4">
                 <span class="text-center hapo-feedback-heading text-fix">
                     Statistic
                 </span>
                 <div class="row hapo-static-data mt-5">
-                    <div class="col-md-4 hapo-statistic">
+                    <div class="col-md-4 hapo-statistic mb-sm-auto mb-5">
                         <div class="hapo-statistic-name">
                             Courses
                         </div>
-                        <div class="hapo-statistic-data">
+                        <div class="hapo-statistic-data mt-3">
                             1,000
                         </div>
                     </div>
-                    <div class="col-md-4 hapo-statistic">
+                    <div class="col-md-4 hapo-statistic mb-sm-auto mb-5">
                         <div class="hapo-statistic-name">
                             Lessons
                         </div>
-                        <div class="hapo-statistic-data">
+                        <div class="hapo-statistic-data mt-3">
                             1,000
                         </div>
                     </div>
-                    <div class="col-md-4 hapo-statistic">
+                    <div class="col-md-4 hapo-statistic mb-sm-auto mb-5">
                         <div class="hapo-statistic-name">
                             Learners
                         </div>
-                        <div class="hapo-statistic-data">
+                        <div class="hapo-statistic-data mt-3">
                             1,000
                         </div>
                     </div>
