--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
             </div>
         </div>
         <div class="container hapo-wrap-statistic">
-            <div class="hapo-content-static text-center mt-xl-5 pt-xl-5 mt-md-4 pt-md-4 mt-4 pt-4">
+            <div class="hapo-content-static text-center my-xl-5 py-xl-5 my-md-4 py-md-4 my-4 py-4">
                 <span class="text-center hapo-feedback-heading text-fix">
                     Statistic
                 </span>
@@ -371,6 +371,74 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="container-wrap mt-5 py-md-5 py-4">
+            <div class="container px-lg-auto px-0 ">
+                <div class="row hapo-wrap-footer">
+                    <div
+                        class="col-md-4 hapo-logo-footer d-flex flex-column align-items-center px-lg-auto px-0 order-md-1 order-2 col-7">
+                        <div class="hapo-logo-f mx-lg-auto ml-n5">
+                            <a href="#" class="hapo-logo-link">
+                                <img class="hapo-logo-image" src="image/Hapo_Learn_write.png" alt="HAPO">
+                            </a>
+                        </div>
+                        <div class="footer-det d-flex align-self-end">
+                            Interactive lessons, "on-the-go" <br>practice, peer support.
+                        </div>
+                    </div>
+                    <div
+                        class="col-md-4 hapo-footer-wrap-list d-flex justify-content-lg-center justify-content-md-around justify-content-around order-md-2 order-1 col-12 px-md-auto px-0 mx-md-auto mb-3">
+                        <div class="hapo-footer-list-page hapo-list-left main-font mx-md-auto ml-n4">
+                            <ul class="hapo-footer-list-page">
+                                <li class="hapo-list-item mt-lg-auto mt-0">
+                                    <a href="#">Home</a>
+                                </li>
+                                <li class="hapo-list-item">
+                                    <a href="#">Features</a>
+                                </li>
+                                <li class="hapo-list-item">
+                                    <a href="#">Courses</a>
+                                </li>
+                                <li class="hapo-list-item">
+                                    <a href="#">Blog</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="hapo-footer-list-page main-font">
+                            <ul class="hapo-footer-list-page">
+                                <li class="hapo-list-item mt-lg-auto mt-0">
+                                    <a href="#">Contact</a>
+                                </li>
+                                <li class="hapo-list-item">
+                                    <a href="#">Terms of Use</a>
+                                </li>
+                                <li class="hapo-list-item">
+                                    <a href="#">FAQ</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div
+                        class="col-md-4 hapo-wrap-contact d-flex justify-content-center align-items-center order-md-3 order-2 col-4">
+                        <a href="#" class="hapo-face-link">
+                            <img src="image/face.png" alt="face" class="hapo-face">
+                        </a>
+                        <a href="#" class="hapo-face-link">
+                            <img src="image/phone.png" alt="phone" class="hapo-face">
+                        </a>
+                        <a href="#" class="hapo-face-link">
+                            <img src="image/mail.png" alt="mail" class="hapo-face">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrap-copy">
+            <div class="container hapo-copyright text-center text-light">
+                © 2020 HapoLearn, Inc. All rights reserved.
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
