--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="hapo-wrap-space"></div>
         <div class="container container-fix">
-            <div class="row row-one">
+            <div class="row row-one row-fix">
                 <div class="col-md-4 course-left">
                     <div class="card">
                         <img class="card-img-top" src="image/course1.png" alt="Card image cap">
@@ -119,7 +119,7 @@
             </span>
         </div>
         <div class="container container-fix">
-            <div class="row row-one row-four mt-xl-5 mt-sm-3">
+            <div class="row row-one row-fix row-four mt-xl-5 mt-sm-3">
                 <div class="col-md-4 course-left">
                     <div class="card">
                         <img class="card-img-top" src="image/CSS.png" alt="Card image cap">
@@ -179,7 +179,7 @@
             <img class="hapo-inf-left" src="image/image_inf_1.png" alt="image_inf_1">
             <div class="container hapo-inf-content">
                 <span class="hapo-content-heading text-fix col-sm-12 col-1 offset-sm-0 offset-4">Why HapoLearn?</span>
-                <div class="row hapo-wrap-inf-content align-items-center">
+                <div class="row row-fix hapo-wrap-inf-content align-items-center">
                     <ul class="col-md-7 col-xl-6 hapo-content align-self-end">
                         <li>
                             <img src="image/tick_icon.png" alt=""> Interactive lessons, "on-the-go" practice, peer
@@ -372,9 +372,9 @@
         </div>
     </main>
     <footer>
-        <div class="container-wrap mt-5 py-md-5 py-4">
+        <div class="container-wrap mt-5 py-md-5 pb-5 pt-4">
             <div class="container px-lg-auto px-0 ">
-                <div class="row hapo-wrap-footer">
+                <div class="row hapo-wrap-footer row-fix">
                     <div
                         class="col-md-4 hapo-logo-footer d-flex flex-column align-items-center px-lg-auto px-0 order-md-1 order-2 col-7">
                         <div class="hapo-logo-f mx-lg-auto ml-n5">
@@ -382,12 +382,12 @@
                                 <img class="hapo-logo-image" src="image/Hapo_Learn_write.png" alt="HAPO">
                             </a>
                         </div>
-                        <div class="footer-det d-flex align-self-end">
+                        <div class="footer-det d-flex align-self-md-end">
                             Interactive lessons, "on-the-go" <br>practice, peer support.
                         </div>
                     </div>
                     <div
-                        class="col-md-4 hapo-footer-wrap-list d-flex justify-content-lg-center justify-content-md-around justify-content-around order-md-2 order-1 col-12 px-md-auto px-0 mx-md-auto mb-3">
+                        class="col-md-4 hapo-footer-wrap-list d-flex justify-content-lg-center justify-content-md-around justify-content-around order-md-2 order-1 col-12 px-md-auto px-0 mx-md-auto mb-4">
                         <div class="hapo-footer-list-page hapo-list-left main-font mx-md-auto ml-n4">
                             <ul class="hapo-footer-list-page">
                                 <li class="hapo-list-item mt-lg-auto mt-0">
