--- a/index.html
+++ b/index.html
@@ -439,6 +439,32 @@
             </div>
         </div>
     </footer>
+    <div class="hapo-fixed">
+        <div class="hapo-wrap-content-mes py-2 px-1 mb-1">
+            <h3 class="hapo-user hapo-user-heading d-flex align-items-center">
+                HapoLearn
+                <img class="hapo-close" src="image/close.png" alt="close">
+            </h3>
+            <div class="hapo-wrap-message-content pl-2 d-flex align-items-center">
+                <img class="hapo-user-image" src="image/chim2.png" alt="chim2">
+                <div class="hapo-message-content d-flex justify-content-center pr-4 pl-3 ml-3 py-2">
+                    Xin chào bạn chúng tôi là Hapo. <br>Bạn có cần chúng tôi hỗ trợ gì không?
+                </div>
+            </div>
+            <div class="hapo-button-message mt-3 text-center">
+                <a href="#" class="hapo-button-message-link py-2 px-5">
+                    <img class="mr-2" src="image/message_small.png" alt="">
+                    Đăng nhập vào Messager
+                </a>
+            </div>
+            <h3 class="det-message d-flex align-items-center justify-content-center py-2 px-3">
+                Chat với Hapolearn trong Message
+            </h3>
+        </div>
+        <div class="hapo-wrap-icon d-flex justify-content-center align-items-center p-2 rounded-circle">
+            <img class="mt-0" src="image/icon_mes.png" alt="message">
+        </div>
+    </div>
 </body>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
