--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <header class="container px-xl-0">
-        <nav class="row navbar navbar-expand-md navbar-light d-flex flex-md-wrap flex-lg-nowrap p-md-0">
+    <header class="container-fluid px-xl-5">
+        <nav class="row navbar navbar-expand-md navbar-light d-flex flex-md-wrap flex-lg-nowrap p-md-0 px-xl-5">
             <div class="w-100 col-xl-4 d-flex flex-nowrap no-gutter-cus px-xl-0">
                 <button class="navbar-toggler border-0 col-xs-2 px-1" type="button" data-toggle="collapse"
                     data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -28,7 +28,8 @@
                 </a>
             </div>
             <div class="collapse navbar-collapse flex-row-reverse col-xl-7 offset-xl-1 p-0" id="navbarNavAltMarkup">
-                <div class="navbar-nav mx-md-0 w-100 d-flex justify-content-between no-gutter-cus">
+                <div
+                    class="navbar-nav mx-md-0 w-100 d-flex justify-content-between justify-content-xl-end no-gutter-cus">
                     <a class="nav-item nav-link mx-md-1 mb-3 mt-5 my-sm-1 text-center" href="#">HOME <span
                             class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link mx-md-2 my-3 my-sm-1 text-center" href="#">All COURSES</a>
@@ -41,10 +42,10 @@
         </nav>
     </header>
     <main>
-        <div class="hapo-wrap-slide position-relative d-flex justify-content-center align-items-center mt-md-4">
+        <div class="hapo-wrap-slide position-relative d-flex justify-content-center align-items-center mt-md-4 mt-xl-0">
             <img class="background-banner w-100" src="image/Hapo_Learn_banner.png" alt="Banner">
-            <div class="container position-absolute px-xl-0 mr-xl-5 wrap-det">
-                <div class="hapo-slide-desc mx-auto">
+            <div class="container-fluid position-absolute px-xl-5 wrap-det">
+                <div class="hapo-slide-desc mx-auto px-xl-5">
                     <h1 class="hapo-slide-desc-slogan my-2 my-md-2 my-lg-3">
                         Learn Anytime, Anywhere <b class="text-fix"><br>at HapoLearn</b>
                         <img src="image/main_chim.png" alt="??">
@@ -373,22 +374,22 @@
     </main>
     <footer>
         <div class="container-wrap mt-5 py-md-5 pb-5 pt-4">
-            <div class="container px-lg-auto px-0 ">
-                <div class="row hapo-wrap-footer row-fix">
+            <div class="container-fluid px-lg-auto px-0 px-xl-5">
+                <div class="row hapo-wrap-footer row-fix mx-md-0">
                     <div
                         class="col-md-4 hapo-logo-footer d-flex flex-column align-items-center px-lg-auto px-0 order-md-1 order-2 col-7">
-                        <div class="hapo-logo-f mx-lg-auto ml-n5">
+                        <div class="hapo-logo-f mx-lg-auto ml-n5 ml-md-n4 ml-xl-5">
                             <a href="#" class="hapo-logo-link">
                                 <img class="hapo-logo-image" src="image/Hapo_Learn_write.png" alt="HAPO">
                             </a>
                         </div>
-                        <div class="footer-det d-flex align-self-md-end">
+                        <div class="footer-det d-flex align-self-md-end align-self-xl-start ml-xl-5 pl-xl-5">
                             Interactive lessons, "on-the-go" <br>practice, peer support.
                         </div>
                     </div>
                     <div
-                        class="col-md-4 hapo-footer-wrap-list d-flex justify-content-lg-center justify-content-md-around justify-content-around order-md-2 order-1 col-12 px-md-auto px-0 mx-md-auto mb-4">
-                        <div class="hapo-footer-list-page hapo-list-left main-font mx-md-auto ml-n4">
+                        class="col-md-4 hapo-footer-wrap-list d-flex justify-content-lg-center justify-content-md-around justify-content-around order-md-2 order-1 col-12 px-md-auto px-0 mb-md-auto mb-3">
+                        <div class="hapo-footer-list-page hapo-list-left main-font mx-md-auto ml-n4 mr-xl-2 ml-xl-n2">
                             <ul class="hapo-footer-list-page">
                                 <li class="hapo-list-item mt-lg-auto mt-0">
                                     <a href="#">Home</a>
@@ -419,7 +420,7 @@
                         </div>
                     </div>
                     <div
-                        class="col-md-4 hapo-wrap-contact d-flex justify-content-center align-items-center order-md-3 order-2 col-4">
+                        class="col-md-4 hapo-wrap-contact d-flex justify-content-center align-items-center justify-content-xl-end order-md-3 order-2 col-4 pr-xl-5">
                         <a href="#" class="hapo-face-link">
                             <img src="image/face.png" alt="face" class="hapo-face">
                         </a>
