fix css and html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header class="container-fluid px-xl-5">
         <nav class="row navbar navbar-expand-md navbar-light d-flex flex-md-wrap flex-lg-nowrap p-md-0 px-xl-5">
-            <div class="w-100 col-xl-4 d-flex flex-nowrap no-gutter-cus px-xl-0">
+            <div class="w-100 col-xl-4 d-flex flex-nowrap no-gutter-cus px-0">
                 <button class="navbar-toggler border-0 col-xs-2 px-1" type="button" data-toggle="collapse"
                     data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
