--- a/index.html
+++ b/index.html
@@ -181,24 +181,24 @@
             <div class="container hapo-inf-content">
                 <span class="hapo-content-heading text-fix col-sm-12 col-1 offset-sm-0 offset-4">Why HapoLearn?</span>
                 <div class="row row-fix hapo-wrap-inf-content align-items-center">
-                    <ul class="col-md-7 col-xl-6 hapo-content align-self-end">
-                        <li>
+                    <ul class="col-md-7 col-xl-6 pl-xl-5 hapo-content align-self-end">
+                        <li class="ml-0 text-center">
                             <img src="image/tick_icon.png" alt=""> Interactive lessons, "on-the-go" practice, peer
                             support.
                         </li>
-                        <li>
+                        <li class="ml-0 text-center">
                             <img src="image/tick_icon.png" alt=""> Interactive lessons, "on-the-go" practice, peer
                             support.
                         </li>
-                        <li>
+                        <li class="ml-0 text-center">
                             <img src="image/tick_icon.png" alt=""> Interactive lessons, "on-the-go" practice, peer
                             support.
                         </li>
-                        <li>
+                        <li class="ml-0 text-center">
                             <img src="image/tick_icon.png" alt=""> Interactive lessons, "on-the-go" practice, peer
                             support.
                         </li>
-                        <li>
+                        <li class="ml-0 text-center">
                             <img src="image/tick_icon.png" alt=""> Interactive lessons, "on-the-go" practice, peer
                             support.
                         </li>
