--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="font/fontawesome/all.min.css">
     <link rel="stylesheet" href="font/font.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="icon" type="image/png" href="image/chim2.png" />
     <link rel="stylesheet" href="css/style.css">
     <title>Hapo</title>
@@ -20,7 +20,7 @@
                 <button class="navbar-toggler border-0 col-xs-2 px-1" type="button" data-toggle="collapse"
                     data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon fix-icon d-flex justify-content-center align-items-center"></span>
                 </button>
                 <a class="navbar-brand col-xl-12 col-sm-7 mx-md-0 mx-md-auto col-xs-8 px-xl-0" href="#">
                     <img class="d-block d-sm-none mx-auto" src="image/Hapo_Learn-425.png" alt="Logo">
@@ -205,7 +205,6 @@
                     </ul>
                     <img class="col-xl-6 col-md-5 hapo-inf-right" src="image/image_inf_2.png" alt="image_inf_2">
                 </div>
-
             </div>
         </div>
         <!-- content feedback -->
@@ -215,7 +214,8 @@
                     FeedBack
                 </span>
                 <div class="hapo-feedback-det">
-                    What other students turned professionals have to say about us <br>after learning with us and
+                    What other students turned professionals have to say about us <br class="line-wrap">after learning
+                    with us and
                     reaching
                     their goals
                 </div>
