--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
         </div>
         <div class="hapo-wrap-courses-row hapo-row-four mt-5">
-            <div class="hapo-other-courses">
+            <div class="hapo-other-courses pt-md-4 pt-xl-0">
                 <a href="#" class="hapo-all-course text-fix">
                     View All Other Courses
                     <img src=" image/direct_icon.png " alt=">>>">
