--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                             <img src="image/user1.png" alt="">
                             <div class="hapo-user-inf">
                                 <div class="hapo-user-name">
-                                    <b>Nguyen Van Lam</b>
+                                    <b>Nguyen Van Lang</b>
                                 </div>
                                 <div class="hapo-courses-name">
                                     php
@@ -294,7 +294,7 @@
                             <img src="image/user1.png" alt="">
                             <div class="hapo-user-inf">
                                 <div class="hapo-user-name">
-                                    <b>Nguyen Van Lam</b>
+                                    <b>Nguyen Van Chinh</b>
                                 </div>
                                 <div class="hapo-courses-name">
                                     php
@@ -316,7 +316,7 @@
                             <img src="image/user1.png" alt="">
                             <div class="hapo-user-inf">
                                 <div class="hapo-user-name">
-                                    <b>Nguyen Van Lam</b>
+                                    <b>Nguyen Van Sang</b>
                                 </div>
                                 <div class="hapo-courses-name">
                                     php
