--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon fix-icon d-flex justify-content-center align-items-center"></span>
                 </button>
-                <a class="navbar-brand col-xl-12 col-sm-7 mx-md-0 mx-md-auto col-xs-8 px-xl-0" href="#">
+                <a class="navbar-brand col-xl-11 col-md-5 col-sm-7 mx-md-0 mx-md-auto col-xs-8 px-xl-0" href="#">
                     <img class="d-block d-sm-none mx-auto" src="image/Hapo_Learn-425.png" alt="Logo">
-                    <img class="d-none d-sm-block my-md-3 mx-xl-0 w-100" src="image/logo.png" alt="Logo">
+                    <img class="d-none d-sm-block my-md-3 my-xl-0 w-100" src="image/logo.png" alt="Logo">
                 </a>
             </div>
             <div class="collapse navbar-collapse flex-row-reverse col-xl-7 offset-xl-1 p-0" id="navbarNavAltMarkup">
@@ -72,7 +72,7 @@
                         <img class="card-img-top" src="image/course1.png" alt="Card image cap">
                         <div class="card-body pb-xl-5 p-md-3">
                             <h5 class="card-title text-center mb-lg-3 mb-md-2 mb-3">HTML/CSS/js Tutorial</h5>
-                            <p class="card-text text-justify px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
+                            <p class="card-text text-center px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
                                 HTML, JS, and CSS
                                 before
                                 entering New
@@ -89,7 +89,7 @@
                         <img class="card-img-top" src="image/laravel.png" alt="Card image cap">
                         <div class="card-body pb-xl-5 p-md-3">
                             <h5 class="card-title text-center mb-lg-3 mb-md-2 mb-3">LARAVEL Tutorial</h5>
-                            <p class="card-text text-justify px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
+                            <p class="card-text text-center px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
                                 HTML, JS, and CSS
                                 before
                                 entering New
@@ -106,7 +106,7 @@
                         <img class="card-img-top" src="image/php.png" alt="Card image cap">
                         <div class="card-body pb-xl-5 p-md-3">
                             <h5 class="card-title text-center mb-lg-3 mb-md-2 mb-3">PHP Tutorial</h5>
-                            <p class="card-text text-justify px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
+                            <p class="card-text text-center px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
                                 HTML, JS, and CSS
                                 before
                                 entering New
@@ -132,7 +132,7 @@
                         <img class="card-img-top" src="image/CSS.png" alt="Card image cap">
                         <div class="card-body pb-xl-5 p-md-3">
                             <h5 class="card-title text-center mb-lg-3 mb-md-2 mb-3">CSS Tutorial</h5>
-                            <p class="card-text text-justify px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
+                            <p class="card-text text-center px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
                                 HTML, JS, and CSS
                                 before
                                 entering New
@@ -146,10 +146,10 @@
                 </div>
                 <div class="col-md-4 course-center">
                     <div class="card">
-                        <img class="card-img-top" src="image/rails.png" alt="Card image cap">
+                        <img class="card-img-top" src="image/rails_v2.png" alt="Card image cap">
                         <div class="card-body pb-xl-5 p-md-3">
                             <h5 class="card-title text-center mb-lg-3 mb-md-2 mb-3">Ruby on rails Tutorial</h5>
-                            <p class="card-text text-justify px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
+                            <p class="card-text text-center px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
                                 HTML, JS, and CSS
                                 before
                                 entering New
@@ -166,7 +166,7 @@
                         <img class="card-img-top" src="image/java 1.png" alt="Card image cap">
                         <div class="card-body pb-xl-5 p-md-3">
                             <h5 class="card-title text-center mb-lg-3 mb-md-2 mb-3">Java Tutorial</h5>
-                            <p class="card-text text-justify px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
+                            <p class="card-text text-center px-xl-3 mb-lg-3 mb-md-2 mb-3">I knew hardly anything about
                                 HTML, JS, and CSS
                                 before
                                 entering New
@@ -191,9 +191,10 @@
         <div class="hapo-wrap-inf">
             <img class="hapo-inf-left" src="image/image_inf_1.png" alt="image_inf_1">
             <div class="container hapo-inf-content">
-                <span class="hapo-content-heading text-fix col-sm-12 col-1 offset-sm-0 offset-4">Why HapoLearn?</span>
+                <span class="hapo-content-heading text-fix col-sm-12 col-1 offset-sm-0 offset-4 pl-xl-0">Why
+                    HapoLearn?</span>
                 <div class="row row-fix hapo-wrap-inf-content align-items-center">
-                    <ul class="col-md-7 col-xl-6 pl-xl-5 hapo-content align-self-end">
+                    <ul class="col-md-7 col-xl-6 pl-xl-3 pl-md-0 hapo-content align-self-end">
                         <li class="ml-0 text-center">
                             <img src="image/tick_icon.png" alt=""> Interactive lessons, "on-the-go" practice, peer
                             support.
@@ -215,7 +216,8 @@
                             support.
                         </li>
                     </ul>
-                    <img class="col-xl-6 col-md-5 hapo-inf-right" src="image/image_inf_2.png" alt="image_inf_2">
+                    <img class="col-xl-6 col-md-5 hapo-inf-right pr-xl-0 pl-xl-5" src="image/image_inf_2.png"
+                        alt="image_inf_2">
                 </div>
             </div>
         </div>
@@ -342,7 +344,7 @@
                     </div>
                     <div class="hapo-button-learn text-center">
                         <a href="#"
-                            class="btn btn-primary border-0 px-md-5 py-xl-0 py-md-3 px-3 py-1 btn-banner-cus hapo-learn-link">
+                            class="btn btn-primary border-0 px-md-5 py-xl-0 py-md-3 px-4 py-2 btn-banner-cus hapo-learn-link">
                             Start Learning Now!
                         </a>
                     </div>
@@ -350,7 +352,7 @@
             </div>
         </div>
         <div class="container hapo-wrap-statistic">
-            <div class="hapo-content-static text-center my-xl-5 py-xl-5 my-md-4 py-md-4 my-4 py-4">
+            <div class="hapo-content-static text-center my-xl-5 py-xl-5 my-md-4 py-md-4 mt-4 pt-4">
                 <span class="text-center hapo-feedback-heading text-fix">
                     Statistic
                 </span>
