--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="font/fontawesome/all.min.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="font/font.css">
     <link rel="icon" type="image/png" href="image/chim2.png" />
     <link rel="stylesheet" href="css/style.css">
@@ -226,8 +228,9 @@
                 <span class="hapo-feedback-heading text-fix">
                     FeedBack
                 </span>
-                <div class="hapo-feedback-det">
-                    What other students turned professionals have to say about us <br class="line-wrap">after learning
+                <div class="hapo-feedback-det container">
+                    What other students turned professionals have to say about us <br class="d-none d-md-block">after
+                    learning
                     with us and
                     reaching
                     their goals
@@ -235,96 +238,104 @@
             </div>
             <div class="container hapo-wrap-feedback-users">
                 <div class="row hapo-wrap-slider">
-                    <div class="col-md-12 col-lg-6 hapo-feedback-user">
-                        <div class="hapo-wrap-feedback-content">
-                            <div class="tooltip-cus"></div>
-                            <div class="hapo-feedback-user-content">
-                                “A wonderful course on how to start. Eddie beautifully conveys all essentials of a
-                                becoming a good Angular developer. Very glad to have taken this course. Thank you Eddie
-                                Bryan.”
-                            </div>
-                        </div>
-                        <div class="hapo-message main-font">
-                            <img src="image/user1.png" alt="">
-                            <div class="hapo-user-inf">
-                                <div class="hapo-user-name">
-                                    <b>Nguyen Van Lam</b>
-                                </div>
-                                <div class="hapo-courses-name">
-                                    php
-                                </div>
-                                <div class="hapo-like">
-                                    <img src="image/vote.png" alt="">
+                    <div class="responsive slider slick-slider">
+                        <div class="col-md-12 col-lg-6 hapo-feedback-user">
+                            <div class="hapo-wrap-feedback-content">
+                                <div class="tooltip-cus"></div>
+                                <div class="hapo-feedback-user-content">
+                                    “A wonderful course on how to start. Eddie beautifully conveys all essentials of a
+                                    becoming a good Angular developer. Very glad to have taken this course. Thank you
+                                    Eddie
+                                    Bryan.”
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 col-lg-6 d d-xl-block d-none hapo-feedback-user">
-                        <div class="hapo-wrap-feedback-content">
-                            <div class="tooltip-cus"></div>
-                            <div class="hapo-feedback-user-content">
-                                “A wonderful course on how to start. Eddie beautifully conveys all essentials of a
-                                becoming a good Angular developer. Very glad to have taken this course. Thank you Eddie
-                                Bryan.”
-                            </div>
-                        </div>
-                        <div class="hapo-message main-font">
-                            <img src="image/user1.png" alt="">
-                            <div class="hapo-user-inf">
-                                <div class="hapo-user-name">
-                                    <b>Nguyen Van Lang</b>
-                                </div>
-                                <div class="hapo-courses-name">
-                                    php
-                                </div>
-                                <div class="hapo-like">
-                                    <img src="image/vote.png" alt="">
+                            <div class="hapo-message main-font">
+                                <img src="image/user1.png" alt="">
+                                <div class="hapo-user-inf">
+                                    <div class="hapo-user-name">
+                                        <b>Nguyen Van Lam</b>
+                                    </div>
+                                    <div class="hapo-courses-name mt-n2">
+                                        php
+                                    </div>
+                                    <div class="hapo-like mb-2">
+                                        <img src="image/vote.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row hapo-wrap-slider">
-                    <div class="col-md-12 col-lg-6 d-xl-block d-none hapo-feedback-user">
-                        <div class="hapo-wrap-feedback-content">
-                            <div class="tooltip-cus"></div>
-                            <div class="hapo-feedback-user-content">
-                                “Yasuo”
-                            </div>
-                        </div>
-                        <div class="hapo-message main-font">
-                            <img src="image/user1.png" alt="">
-                            <div class="hapo-user-inf">
-                                <div class="hapo-user-name">
-                                    <b>Nguyen Van Chinh</b>
-                                </div>
-                                <div class="hapo-courses-name">
-                                    php
-                                </div>
-                                <div class="hapo-like">
-                                    <img src="image/vote.png" alt="">
+                        <div class="col-md-12 col-lg-6 hapo-feedback-user">
+                            <div class="hapo-wrap-feedback-content">
+                                <div class="tooltip-cus"></div>
+                                <div class="hapo-feedback-user-content">
+                                    “A wonderful course on how to start. Eddie beautifully conveys all essentials of a
+                                    becoming a good Angular developer. Very glad to have taken this course. Thank you
+                                    Eddie
+                                    Bryan.”
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-md-12 col-lg-6 hapo-feedback-user">
-                        <div class="hapo-wrap-feedback-content">
-                            <div class="tooltip-cus"></div>
-                            <div class="hapo-feedback-user-content">
-                                “Yasuo”
+                            <div class="hapo-message main-font">
+                                <img src="image/user1.png" alt="">
+                                <div class="hapo-user-inf">
+                                    <div class="hapo-user-name">
+                                        <b>Nguyen Van Lam</b>
+                                    </div>
+                                    <div class="hapo-courses-name mt-n2">
+                                        php
+                                    </div>
+                                    <div class="hapo-like mb-2">
+                                        <img src="image/vote.png" alt="">
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="hapo-message main-font">
-                            <img src="image/user1.png" alt="">
-                            <div class="hapo-user-inf">
-                                <div class="hapo-user-name">
-                                    <b>Nguyen Van Sang</b>
+                        <div class="col-md-12 col-lg-6 hapo-feedback-user">
+                            <div class="hapo-wrap-feedback-content">
+                                <div class="tooltip-cus"></div>
+                                <div class="hapo-feedback-user-content">
+                                    “A wonderful course on how to start. Eddie beautifully conveys all essentials of a
+                                    becoming a good Angular developer. Very glad to have taken this course. Thank you
+                                    Eddie
+                                    Bryan.”
                                 </div>
-                                <div class="hapo-courses-name">
-                                    php
+                            </div>
+                            <div class="hapo-message main-font">
+                                <img src="image/user1.png" alt="">
+                                <div class="hapo-user-inf">
+                                    <div class="hapo-user-name">
+                                        <b>Nguyen Van Lam</b>
+                                    </div>
+                                    <div class="hapo-courses-name mt-n2">
+                                        php
+                                    </div>
+                                    <div class="hapo-like mb-2">
+                                        <img src="image/vote.png" alt="">
+                                    </div>
                                 </div>
-                                <div class="hapo-like">
-                                    <img src="image/vote.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-md-12 col-lg-6 hapo-feedback-user">
+                            <div class="hapo-wrap-feedback-content">
+                                <div class="tooltip-cus"></div>
+                                <div class="hapo-feedback-user-content">
+                                    “A wonderful course on how to start. Eddie beautifully conveys all essentials of a
+                                    becoming a good Angular developer. Very glad to have taken this course. Thank you
+                                    Eddie
+                                    Bryan.”
+                                </div>
+                            </div>
+                            <div class="hapo-message main-font">
+                                <img src="image/user1.png" alt="">
+                                <div class="hapo-user-inf">
+                                    <div class="hapo-user-name">
+                                        <b>Nguyen Van Lam</b>
+                                    </div>
+                                    <div class="hapo-courses-name mt-n2">
+                                        php
+                                    </div>
+                                    <div class="hapo-like mb-2">
+                                        <img src="image/vote.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -339,7 +350,7 @@
         <div class="hapo-wrap-learn">
             <div class="container hapo-wrap-content-learn">
                 <div class="hapo-content-learn">
-                    <div class="hapo-learn-heading text-fix mx-auto">
+                    <div class="hapo-learn-heading text-fix mx-auto mb-xl-3">
                         Become a member of our<br> growing community!
                     </div>
                     <div class="hapo-button-learn text-center">
@@ -486,6 +497,7 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/slick.min.js"></script>
 <script type="text/javascript" src="js/show_mess.js">
 </script>
 
