--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </span>
         </div>
         <div class="container container-fix">
-            <div class="row row-one row-fix row-four mt-xl-5 mt-sm-3">
+            <div class="row row-one row-fix row-four mt-xl-5 mt-sm-3 mt-0">
                 <div class="col-md-4 course-left">
                     <div class="card">
                         <img class="card-img-top" src="image/CSS.png" alt="Card image cap">
